//
//  WLStreamsManager.m
//  WorkLabs
//
//  Created by erfeixia on 2026/3/29.
//

#import "WLStreamsManager.h"
#import "WLVideoModeStreams.h"
#import "WLAudioMixStreams.h"

@interface WLStreamsManager ()

@property (nonatomic, strong) WLVideoModeStreams *videoStream;
@property (nonatomic, strong) WLAudioMixStreams *audioStream;

@end

@implementation WLStreamsManager

- (instancetype)init {
    self = [super init];
    if (self) {
        self.videoStream = [[WLVideoModeStreams alloc] init];
        self.audioStream = [[WLAudioMixStreams alloc] init];
    }
    return self;
}

#pragma mark - Public Methods
+ (instancetype)manager {
    static WLStreamsManager *manager = nil;
    static dispatch_once_t onceToken;
    dispatch_once(&onceToken, ^{
        manager = [[WLStreamsManager alloc] init];
    });
    return manager;
}


- (void)addVideoNode:(WLNode *)node {
    [self.videoStream addNode:node];
}

- (void)addAudioNode:(WLNode *)node {
    [self.audioStream addNode:node];
}

- (void)start {
    [self.videoStream startConcat];
    [self.audioStream startMix];
}

- (void)stop {
    [self.videoStream stopConcat];
    [self.audioStream stopMix];
}
@end
